fix a horizontal scrolling issue

--- a/shared/layout-components/side-nav/side-nav.component.scss
+++ b/shared/layout-components/side-nav/side-nav.component.scss
@@ -10,6 +10,10 @@
 
 .side-nav-content{
     padding-top: 16px;
+    flex:1 1 50%; 
+    min-height: 50%; 
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .side-nav{
